layout and home page design done

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,27 +1,86 @@
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Inter:wght@300;400;500;600;700&family=Open+Sans:wght@400;500;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+* {
+  margin: 0;
+  padding: 0;
+  scroll-behavior: smooth;
+  box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+.img-fluid {
+  max-width: 100%;
+  height: auto;
+}
+
+.aw_black-overlay {
+  background: black;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0.3;
+  z-index: -1;
+}
+
+/* shadow */
+.black-shadow {
+  box-shadow: 3px 3px 11px rgba(0, 0, 0, 0.11);
+}
+.shadow-light {
+  box-shadow: 0px 0px 11px rgba(0, 0, 0, 0.08);
+}
+
+/* form */
+.input-with-shadow {
+  box-shadow: 3px 3px 11px rgba(0, 0, 0, 0.11);
+  border: 0;
+  outline: 0;
+  border-radius: 7px;
+  padding: 16px;
+}
+.form-label {
+  font-size: 20px;
+  font-weight: 700;
+}
+.input-checkbox {
+  border: 1px solid black;
+  outline: 0;
+  border-radius: 0;
+  padding: 5px;
+}
+
+input:focus,
+textarea:focus,
+.order-select:focus {
+  outline: none;
+  border: 0 !important;
+  box-shadow: 0 0 11px rgba(52, 119, 255, 0.22) !important;
+}
+
+.divider {
+  background-color: #1e1e1e;
+  height: 1px;
+  width: 100%;
+}
+.service-card:hover svg path {
+  fill: white;
+}
+
+.blink {
+  animation: blink infinite 2s ease-in-out;
+}
+
+@keyframes blink {
+  0%,
+  100% {
+    opacity: 0;
   }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  50% {
+    opacity: 1;
+  }
 }
